--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,9 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>=</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Me - Adilzhan Slyamgazy</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+<header>
+    <nav class="container">
+        <a href="index.html" class="logo">Adilzhan Slyamgazy</a>
+        <div class="nav-links">
+            <a href="../index.html">Home</a>
+            <a href="family.html">Family</a>
+            <a href="education.html">Education</a>
+            <a href="hobbies.html">Hobbies</a>
+            <a href="contact.html">Contact</a>
+        </div>
+        <button class="menu-button">☰</button>
+    </nav>
+</header>
 
+<div class="container">
+    <h1>Contact Me</h1>
+    <div class="contact-grid">
+        <div>
+            <form>
+                <div>
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div>
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" rows="4" required></textarea>
+                </div>
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
+    </div>
+</div>
 </body>
 </html>
