page content structured in container under header, added images

--- a/index.html
+++ b/index.html
@@ -20,5 +20,17 @@
         <button class="menu-button">☰</button>
     </nav>
 </header>
+
+<div class="container">
+    <div class="me">
+        <img src="img/adil_1.png" alt="Adilzhan Slyamgazy">
+        <div>
+            <h1>Welcome to My Portfolio</h1>
+            <p>Hi, I'm Adilzhan Slyamgazy. Throughout my life, I've been involved in various projects, not just coding but also graphic design and video editing. I'm passionate about learning and applying new skills.</p>
+            <p>I love mathematics for its problem-solving nature and its ubiquity in practical applications. My experience in graphic design has honed my creativity, while freelancing has developed my soft skills. This combination allows me to find creative and extraordinary approaches to solving technical problems.</p>
+            <a href="pages/contact.html" class="cta-button">Get in Touch</a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
