education page done

--- a/pages/education.html
+++ b/pages/education.html
@@ -2,9 +2,71 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Education - Adilzhan Slyamgazy</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+<header>
+    <nav class="container">
+        <a href="../index.html" class="logo">Adilzhan Slyamgazy</a>
+        <div class="nav-links">
+            <a href="../index.html">Home</a>
+            <a href="family.html">Family</a>
+            <a href="education.html">Education</a>
+            <a href="hobbies.html">Hobbies</a>
+            <a href="contact.html">Contact</a>
+        </div>
+        <button class="menu-button">☰</button>
+    </nav>
+</header>
 
+<div class="container">
+    <h1>My Education</h1>
+    <div>
+        <h2>Timeline</h2>
+        <ul class="timeline">
+            <li>School #16 in Semey (2009-2015)</li>
+            <li>Gymnasium #37 in Semey (2015-2020)</li>
+            <li>Astana IT University (2020)</li>
+            <li>Foundation at Czech Technical University (2020-2021)</li>
+            <li>SDU University (2022-2026)</li>
+        </ul>
+    </div>
+    <div>
+        <h2>Key Milestones</h2>
+        <table>
+            <thead>
+            <tr>
+                <th>Year</th>
+                <th>Institution</th>
+                <th>Achievement</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>2015</td>
+                <td>School #16</td>
+                <td>Completed primary education</td>
+            </tr>
+            <tr>
+                <td>2020</td>
+                <td>Gymnasium #37</td>
+                <td>Graduated with honors</td>
+            </tr>
+            <tr>
+                <td>2021</td>
+                <td>Czech Technical University</td>
+                <td>Completed foundation program</td>
+            </tr>
+            <tr>
+                <td>2022-Present</td>
+                <td>SDU University</td>
+                <td>Pursuing Bachelor's degree</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 </body>
 </html>
