--- a/pages/family.html
+++ b/pages/family.html
@@ -2,9 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Family - Adilzhan Slyamgazy</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+<header>
+    <nav class="container">
+        <a href="../index.html" class="logo">Adilzhan Slyamgazy</a>
+        <div class="nav-links">
+            <a href="../index.html">Home</a>
+            <a href="family.html">Family</a>
+            <a href="education.html">Education</a>
+            <a href="hobbies.html">Hobbies</a>
+            <a href="contact.html">Contact</a>
+        </div>
+        <button class="menu-button">☰</button>
+    </nav>
+</header>
 
+<div class="container">
+    <h1>My Family</h1>
+    <div class="family-grid">
+        <div class="family-member">
+            <img src="../img/mama_2.PNG" alt="Mother">
+            <h2>Mother</h2>
+            <p>My mother is a strong woman who raised and educated two children. She moved to Astana to support my sister's education at NIS.</p>
+        </div>
+        <div class="family-member">
+            <img src="../img/alima_1.jpg" alt="Sister">
+            <h2>Sister</h2>
+            <p>My sister is currently studying at Semey NIS. She recently organized a clean-up day on Polkovnichiy Island in Semey.</p>
+        </div>
+        <div class="family-member">
+            <img src="../img/alima_2.jpg" alt="Little Sister">
+            <h2>Little Sister</h2>
+            <p>My little sister is studying at Semey NIS. She enjoys reading books and solving Sudoku puzzles.</p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
