--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -2,9 +2,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Hobbies - Adilzhan Slyamgazy</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+<header>
+    <nav class="container">
+        <a href="../index.html" class="logo">Adilzhan Slyamgazy</a>
+        <div class="nav-links">
+            <a href="../index.html">Home</a>
+            <a href="family.html">Family</a>
+            <a href="education.html">Education</a>
+            <a href="hobbies.html">Hobbies</a>
+            <a href="contact.html">Contact</a>
+        </div>
+        <button class="menu-button">☰</button>
+    </nav>
+</header>
 
+<div class="container">
+    <h1>My Hobbies and Interests</h1>
+    <div class="hobbies-grid">
+        <div class="hobby-item">
+            <div class="hobby-icon">🎨</div>
+            <h2>Graphic Design</h2>
+        </div>
+        <div class="hobby-item">
+            <div class="hobby-icon">🎥</div>
+            <h2>Video Editing</h2>
+        </div>
+        <div class="hobby-item">
+            <div class="hobby-icon">🎮</div>
+            <h2>Gaming</h2>
+        </div>
+        <div class="hobby-item">
+            <div class="hobby-icon">🌟</div>
+            <h2>Motion Design</h2>
+        </div>
+    </div>
+    <div>
+        <h2>Graphic Design Gallery</h2>
+        <div class="gallery">
+            <img src="../img/d1.png" alt="Design 1">
+            <img src="../img/d2.PNG" alt="Design 2">
+            <img src="../img/d3.png" alt="Design 3">
+            <img src="../img/d4.png" alt="Design 4">
+            <img src="../img/d5.png" alt="Design 5">
+            <img src="../img/d6.png" alt="Design 6">
+        </div>
+    </div>
+</div>
 </body>
 </html>
