not done yet, added footers

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="container">
     <div class="me">
-        <img src="img/adil_1.png" alt="Adilzhan Slyamgazy">
+        <img src="img/adilzhan.jpg" alt="Adilzhan Slyamgazy">
         <div>
             <h1>Welcome to My Portfolio</h1>
             <p>Hi, I'm Adilzhan Slyamgazy. Throughout my life, I've been involved in various projects, not just coding but also graphic design and video editing. I'm passionate about learning and applying new skills.</p>
@@ -32,5 +32,9 @@
         </div>
     </div>
 </div>
+
+<footer>
+    <p>&copy; 2024 Adilzhan Slyamgazy. All rights reserved.</p>
+</footer>
 </body>
 </html>
