--- a/pages/family.html
+++ b/pages/family.html
@@ -25,21 +25,25 @@
     <h1>My Family</h1>
     <div class="family-grid">
         <div class="family-member">
-            <img src="../img/mama_2.PNG" alt="Mother">
+            <img src="../img/mom.jpg" alt="Mother">
             <h2>Mother</h2>
             <p>My mother is a strong woman who raised and educated two children. She moved to Astana to support my sister's education at NIS.</p>
         </div>
         <div class="family-member">
-            <img src="../img/alima_1.jpg" alt="Sister">
+            <img src="../img/sister.jpg" alt="Sister">
             <h2>Sister</h2>
             <p>My sister is currently studying at Semey NIS. She recently organized a clean-up day on Polkovnichiy Island in Semey.</p>
         </div>
         <div class="family-member">
-            <img src="../img/alima_2.jpg" alt="Little Sister">
+            <img src="../img/lilsister.jpg" alt="Little Sister">
             <h2>Little Sister</h2>
             <p>My little sister is studying at Semey NIS. She enjoys reading books and solving Sudoku puzzles.</p>
         </div>
     </div>
 </div>
+
+<footer>
+    <p>&copy; 2024 Adilzhan Slyamgazy. All rights reserved.</p>
+</footer>
 </body>
 </html>
