--- a/pages/contact.html
+++ b/pages/contact.html
@@ -76,5 +76,9 @@
         </div>
     </div>
 </div>
+
+<footer>
+    <p>&copy; 2024 Adilzhan Slyamgazy. All rights reserved.</p>
+</footer>
 </body>
 </html>
