--- a/pages/education.html
+++ b/pages/education.html
@@ -68,5 +68,9 @@
         </table>
     </div>
 </div>
+
+<footer>
+    <p>&copy; 2024 Adilzhan Slyamgazy. All rights reserved.</p>
+</footer>
 </body>
 </html>
