--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -53,5 +53,8 @@
         </div>
     </div>
 </div>
+<footer>
+    <p>&copy; 2024 Adilzhan Slyamgazy. All rights reserved.</p>
+</footer>
 </body>
 </html>
