improvements to header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
     <nav class="container">
-        <a href="index.html" class="logo">Adilzhan Slyamgazy</a>
+        <a href="index.html" class="logo">herztard</a>
         <div class="nav-links">
             <a href="index.html">Home</a>
             <a href="pages/family.html">Family</a>
@@ -20,12 +20,19 @@
         <button class="menu-button">☰</button>
     </nav>
 </header>
+<div id="header-pages" class="image-background pattern-black">
+    <div class="section-content">
+        <div class="big-text">
+            <h2 class="white t-left f-large ultrabold uppercase">Welcome.</h2>
+            <h3 class="white t-left f-medium normal uppercase no-margin">Learn about <span class="bold">Adilzhan Slyamgazy.</span></h3>
+        </div>
+    </div>
+</div>
 
 <div class="container">
     <div class="me">
-        <img src="img/adilzhan.jpg" alt="Adilzhan Slyamgazy">
+        <img src="img/adil_1_transparent.png" alt="Adilzhan Slyamgazy">
         <div>
-            <h1>Welcome to My Portfolio</h1>
             <p>Hi, I'm Adilzhan Slyamgazy. Throughout my life, I've been involved in various projects, not just coding but also graphic design and video editing. I'm passionate about learning and applying new skills.</p>
             <p>I love mathematics for its problem-solving nature and its ubiquity in practical applications. My experience in graphic design has honed my creativity, while freelancing has developed my soft skills. This combination allows me to find creative and extraordinary approaches to solving technical problems.</p>
             <a href="pages/contact.html" class="cta-button">Get in Touch</a>
