--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,7 @@
 <body>
 <header>
     <nav class="container">
-        <a href="../index.html" class="logo">Adilzhan Slyamgazy</a>
+        <a href="../index.html" class="logo">herztard</a>
         <div class="nav-links">
             <a href="../index.html">Home</a>
             <a href="family.html">Family</a>
