--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
 
 <div class="container">
     <div class="me">
-        <img src="img/adil_1_transparent.png" alt="Adilzhan Slyamgazy">
+        <img src="img/adilzhan.jpg" alt="Adilzhan Slyamgazy">
         <div>
-            <p>Hi, I'm Adilzhan Slyamgazy. Throughout my life, I've been involved in various projects, not just coding but also graphic design and video editing. I'm passionate about learning and applying new skills.</p>
-            <p>I love mathematics for its problem-solving nature and its ubiquity in practical applications. My experience in graphic design has honed my creativity, while freelancing has developed my soft skills. This combination allows me to find creative and extraordinary approaches to solving technical problems.</p>
-            <a href="pages/contact.html" class="cta-button">Get in Touch</a>
+            <h3 class="t-left f-semi-expanded ultrabold uppercase">About me.</h3>
+            <p>Hi, I'm Adilzhan Slyamgazy. Throughout my life, I have been a part of my projects (not only coding, but also graphic design, video editing), where I was focused on consuming and assimilating new knowledge and skills. I have finished with this level and I would like to leave everything that concerns non—coding as a hobby, so I am in search of my next step - coding with a specialization in something that poses challenges to solving tasks.</p>
+            <p>I love mathematics for its problems and for its ubiquity and abstraction, which gives other sciences a practical application. My experience in graphic design has helped to develop my originality and creativity. And my experience in freelancing has developed my soft skills. In the symbiosis of my skills, I am able to find creative and extraordinary approaches to solving technical problems.</p>
+            <p>In the future, after mastering the backend, I want to study the front, where I could apply my skills in design and understanding UI/UX on a large scale. Thus becoming a full-stack.</p>
+            <a href="pages/contact.html" class="button no-margin dark">Get in Touch</a>
+
         </div>
     </div>
 </div>
