--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
 <div class="container">
     <div class="me">
-        <img src="img/adilzhan.jpg" alt="Adilzhan Slyamgazy">
+        <img src="img/adilzhan.png" alt="Adilzhan Slyamgazy">
         <div>
-            <h3 class="t-left f-semi-expanded ultrabold uppercase">About me.</h3>
+            <h3 class="t-left f-semi-expanded ultrabold uppercase no-margin-top">About me.</h3>
             <p>Hi, I'm Adilzhan Slyamgazy. Throughout my life, I have been a part of my projects (not only coding, but also graphic design, video editing), where I was focused on consuming and assimilating new knowledge and skills. I have finished with this level and I would like to leave everything that concerns non—coding as a hobby, so I am in search of my next step - coding with a specialization in something that poses challenges to solving tasks.</p>
             <p>I love mathematics for its problems and for its ubiquity and abstraction, which gives other sciences a practical application. My experience in graphic design has helped to develop my originality and creativity. And my experience in freelancing has developed my soft skills. In the symbiosis of my skills, I am able to find creative and extraordinary approaches to solving technical problems.</p>
             <p>In the future, after mastering the backend, I want to study the front, where I could apply my skills in design and understanding UI/UX on a large scale. Thus becoming a full-stack.</p>
@@ -44,7 +44,12 @@
 </div>
 
 <footer>
-    <p>&copy; 2024 Adilzhan Slyamgazy. All rights reserved.</p>
+    <div class="footer-details">
+        <p class="white f-small uppercase bold"><b>Social Networks</b></p>
+        <p class="white f-small"><a href="https://t.me/herztard" class="white">Telegram</a></p>
+        <p class="white f-small"><a href="https://www.instagram.com/herztard/" class="white">Instagram</a></p>
+        <p class="white f-small"><a href="https://github.com/herztard" class="white">GitHub</a></p>
+    </div>
 </footer>
 </body>
 </html>
