--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div id="header-pages" class="image-background pattern-black">
     <div class="section-content">
         <div class="big-text">
-            <h2 class="white t-left f-large ultrabold uppercase">Welcome.</h2>
+            <h2 class="white t-left f-large ultrabold uppercase no-margin-top no-margin-bottom">Welcome.</h2>
             <h3 class="white t-left f-medium normal uppercase no-margin">Learn about <span class="bold">Adilzhan Slyamgazy.</span></h3>
         </div>
     </div>
