footer fix in all pages

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -78,7 +78,12 @@
 </div>
 
 <footer>
-    <p>&copy; 2024 Adilzhan Slyamgazy. All rights reserved.</p>
+    <div class="footer-details">
+        <p class="white f-small uppercase bold"><b>Social Networks</b></p>
+        <p class="white f-small"><a href="https://t.me/herztard" class="white">Telegram</a></p>
+        <p class="white f-small"><a href="https://www.instagram.com/herztard/" class="white">Instagram</a></p>
+        <p class="white f-small"><a href="https://github.com/herztard" class="white">GitHub</a></p>
+    </div>
 </footer>
 </body>
 </html>
