--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -20,8 +20,26 @@
         <button class="menu-button">☰</button>
     </nav>
 </header>
-
-
+<div id="header-pages" class="image-background pattern-black">
+    <div class="section-content">
+        <div class="big-text">
+            <h2 class="white t-left f-large ultrabold uppercase no-margin-top no-margin-bottom">My Hobbies.</h2>
+            <h3 class="white t-left f-medium normal uppercase no-margin">When time flies by<span class="bold"> unnoticed.</span></h3>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="me" style="align-items: center">
+        <img src="../img/adil_shegol.png" alt="Adilzhan Slyamgazy">
+        <div>
+            <h3 class="t-left f-semi-expanded ultrabold uppercase no-margin-top">Where I come from.</h3>
+            <p>Since early childhood, the main source of my hobbies was the computer. I played games, my cousins got me hooked on the Warcraft universe, we played Warcraft 3, later I left a lot of hours in the World of Warcraft game. Later, I became interested in creating something, I discovered graphic design.</p>
+            <p>I've been doing graphic design for six years. This is my main hobby, in which I can already work at the Senior level. But this is a hobby, and my career path is already following the backend.</p>
+            <p>I was an ex-head at the Zhasa club. It is a club of designers, photographers and videographers. He took an active part in it.</p>
+            <p>In addition to design, I can do motion design, video editing.</p>
+        </div>
+    </div>
+</div>
 <div class="container">
     <h1>My Hobbies and Interests</h1>
     <div class="hobbies-grid">
@@ -43,13 +61,23 @@
         </div>
     </div>
     <div>
+        <h2>Me and Zhasa Club</h2>
+
+        <div class="gallery">
+            <img src="../img/zhasa_1.JPG" alt="zhasa 1">
+            <img src="../img/zhasa_2.JPG" alt="zhasa 2">
+            <img src="../img/zhasa_3.png" alt="zhasa 3">
+
+        </div>
+    </div>
+    <div>
         <h2>Graphic Design Gallery</h2>
         <div class="gallery">
             <img src="../img/d1.png" alt="Design 1">
             <img src="../img/d5.png" alt="Design 5">
             <img src="../img/d3.png" alt="Design 3">
-            <img src="../img/d2.PNG" alt="Design 2">
             <img src="../img/d4.png" alt="Design 4">
+            <img src="../img/d2.png" alt="Design 2">
             <img src="../img/d6.png" alt="Design 6">
         </div>
     </div>
