navbar active status added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,7 @@
             <a href="family.html">Family</a>
             <a href="education.html">Education</a>
             <a href="hobbies.html">Hobbies</a>
-            <a href="contact.html">Contact</a>
+            <a href="contact.html" style="color: #fdcb1c;">Contact</a>
         </div>
         <button class="menu-button">☰</button>
     </nav>
