--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -11,10 +11,11 @@
     <nav class="container">
         <a href="../index.html" class="logo">Adilzhan Slyamgazy</a>
         <div class="nav-links">
+
             <a href="../index.html">Home</a>
             <a href="family.html">Family</a>
             <a href="education.html">Education</a>
-            <a href="hobbies.html">Hobbies</a>
+            <a href="hobbies.html" style="color: #fdcb1c;">Hobbies</a>
             <a href="contact.html">Contact</a>
         </div>
         <button class="menu-button">☰</button>
@@ -67,7 +68,6 @@
             <img src="../img/zhasa_1.JPG" alt="zhasa 1">
             <img src="../img/zhasa_2.JPG" alt="zhasa 2">
             <img src="../img/zhasa_3.png" alt="zhasa 3">
-
         </div>
     </div>
     <div>
