--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="container">
         <a href="index.html" class="logo">herztard</a>
         <div class="nav-links">
-            <a href="index.html">Home</a>
+            <a href="index.html" style="color: #fdcb1c;">Home</a>
             <a href="pages/family.html">Family</a>
             <a href="pages/education.html">Education</a>
             <a href="pages/hobbies.html">Hobbies</a>
