--- a/pages/education.html
+++ b/pages/education.html
@@ -13,7 +13,7 @@
         <div class="nav-links">
             <a href="../index.html">Home</a>
             <a href="family.html">Family</a>
-            <a href="education.html">Education</a>
+            <a href="education.html" style="color: #fdcb1c;">Education</a>
             <a href="hobbies.html">Hobbies</a>
             <a href="contact.html">Contact</a>
         </div>
