--- a/pages/family.html
+++ b/pages/family.html
@@ -12,8 +12,8 @@
         <a href="../index.html" class="logo">herztard</a>
         <div class="nav-links">
             <a href="../index.html">Home</a>
-            <a href="family.html">Family</a>
-            <a href="education.html">Education</a>
+            <a href="family.html" style="color: #fdcb1c;">Family</a>
+            <a href="education.html" >Education</a>
             <a href="hobbies.html">Hobbies</a>
             <a href="contact.html">Contact</a>
         </div>
