--- a/pages/family.html
+++ b/pages/family.html
@@ -20,24 +20,31 @@
         <button class="menu-button">☰</button>
     </nav>
 </header>
-
+<div id="header-pages" class="image-background pattern-black">
+    <div class="section-content">
+        <div class="big-text">
+            <h2 class="white t-left f-large ultrabold uppercase no-margin-top no-margin-bottom">Family.</h2>
+            <h3 class="white t-left f-medium normal uppercase no-margin">The roots come from <span class="bold">Semey.</span></h3>
+        </div>
+    </div>
+</div>
 <div class="container">
     <h1>My Family</h1>
     <div class="family-grid">
         <div class="family-member">
-            <img src="../img/mom.jpg" alt="Mother">
-            <h2>Mother</h2>
-            <p>My mother is a strong woman who raised and educated two children. She moved to Astana to support my sister's education at NIS.</p>
+            <img src="../img/mom.jpg" alt="Family">
+            <h2>Family</h2>
+            <p>I was born in Semey, like my whole family. However, when I entered SDU University, we scattered to different cities like cockroaches. The fact is that in the same year my sister enrolled in Semey NIS, and my mother moved to Astana so that my sister would live in the NIS dorm and not travel long distances to school and back every day.</p>
         </div>
         <div class="family-member">
-            <img src="../img/sister.jpg" alt="Sister">
-            <h2>Sister</h2>
-            <p>My sister is currently studying at Semey NIS. She recently organized a clean-up day on Polkovnichiy Island in Semey.</p>
+            <img src="../img/mama_2.png" alt="Mother">
+            <h2>Mother</h2>
+            <p>My mother is a strong woman who was able to dress and teach two children. My sister and I try to please her with our academic and career successes. She gave us a boost and we try to make the most of all the inertia, showing that her work was not in vain.</p>
         </div>
         <div class="family-member">
             <img src="../img/lilsister.jpg" alt="Little Sister">
             <h2>Little Sister</h2>
-            <p>My little sister is studying at Semey NIS. She enjoys reading books and solving Sudoku puzzles.</p>
+            <p>Mom says that we found my little sister in the cabbage, but I remember how we sheltered her from the zoo and raised her as a human being. She is currently studying at Semey NIS, and recently organized a clean-up day on the island of Polkovnichiy in Semey. She likes to read books and solve Sudoku. It scares me that she looks like me, because it seems to me that I was also found at the zoo.</p>
         </div>
     </div>
 </div>
