contacts button reworked

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,7 +20,14 @@
         <button class="menu-button">☰</button>
     </nav>
 </header>
-
+<div id="header-pages" class="image-background pattern-black">
+    <div class="section-content">
+        <div class="big-text">
+            <h2 class="white t-left f-large ultrabold uppercase no-margin-top no-margin-bottom">Contacts.</h2>
+            <h3 class="white t-left f-medium normal uppercase no-margin">Now you have my <span class="bold">contacts.</span></h3>
+        </div>
+    </div>
+</div>
 <div class="container">
     <h1>Contact Me</h1>
     <div class="contact-grid">
