--- a/pages/contact.html
+++ b/pages/contact.html
@@ -33,22 +33,27 @@
     <div class="contact-grid">
         <div>
             <form>
+                <h2>Contact me</h2>
                 <div>
                     <label for="name">Name</label>
-                    <input type="text" id="name" name="name" required>
+                    <input type="text" id="name" name="name" placeholder="Enter your name" required>
                 </div>
                 <div>
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" name="email" placeholder="Enter your email" required>
                 </div>
                 <div>
                     <label for="message">Message</label>
-                    <textarea id="message" name="message" rows="4" required></textarea>
+                    <textarea id="message" name="message" rows="4" placeholder="Enter your message" required></textarea>
                 </div>
                 <button type="submit">Send Message</button>
             </form>
         </div>
         <div>
+            <div>
+                <h2>Location</h2>
+                <img src="../img/map.jpg" alt="Map" style="width: 350px">
+            </div>
             <h2>Connect with Me</h2>
             <ul class="social-links">
                 <li>
@@ -76,10 +81,7 @@
                     </a>
                 </li>
             </ul>
-            <div>
-                <h2>Location</h2>
-                <img src="../img/map.jpg" alt="Map" width="400">
-            </div>
+
         </div>
     </div>
 </div>
