--- a/pages/education.html
+++ b/pages/education.html
@@ -20,7 +20,14 @@
         <button class="menu-button">☰</button>
     </nav>
 </header>
-
+<div id="header-pages" class="image-background pattern-black">
+    <div class="section-content">
+        <div class="big-text">
+            <h2 class="white t-left f-large ultrabold uppercase no-margin-top no-margin-bottom">Education.</h2>
+            <h3 class="white t-left f-medium normal uppercase no-margin"><span class="bold">SDU </span> is my third university.</h3>
+        </div>
+    </div>
+</div>
 <div class="container">
     <h1>My Education</h1>
     <div>
