--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -9,7 +9,7 @@
 <body>
 <header>
     <nav class="container">
-        <a href="../index.html" class="logo">Adilzhan Slyamgazy</a>
+        <a href="../index.html" class="logo">herztard</a>
         <div class="nav-links">
 
             <a href="../index.html">Home</a>
@@ -18,7 +18,19 @@
             <a href="hobbies.html" style="color: #fdcb1c;">Hobbies</a>
             <a href="contact.html">Contact</a>
         </div>
-        <button class="menu-button">☰</button>
+        <div class="menu-button">
+            <div class="menu">
+                <input type="checkbox" id="burger-checkbox" class="burger-checkbox">
+                <label for="burger-checkbox" class="burger"></label>
+                <ul class="menu-list">
+                    <li><a href="../index.html" >Home</a><li>
+                    <li><a href="family.html">Family</a><li>
+                    <li><a href="education.html">Education</a><li>
+                    <li><a href="hobbies.html" style="color: #fdcb1c;">Hobbies</a><li>
+                    <li><a href="contact.html">Contact</a><li>
+                </ul>
+            </div>
+        </div>
     </nav>
 </header>
 <div id="header-pages" class="image-background pattern-black">
