--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
             <a href="pages/hobbies.html">Hobbies</a>
             <a href="pages/contact.html">Contact</a>
         </div>
-        <button class="menu-button">☰</button>
+        <div class="menu-button">
+            <div class="menu">
+                <input type="checkbox" id="burger-checkbox" class="burger-checkbox">
+                <label for="burger-checkbox" class="burger"></label>
+                <ul class="menu-list">
+                    <li><a href="index.html" style="color: #fdcb1c;">Home</a><li>
+                    <li><a href="pages/family.html">Family</a><li>
+                    <li><a href="pages/education.html">Education</a><li>
+                    <li><a href="pages/hobbies.html">Hobbies</a><li>
+                    <li><a href="pages/contact.html">Contact</a><li>
+                </ul>
+            </div>
+        </div>
     </nav>
 </header>
 <div id="header-pages" class="image-background pattern-black">
