--- a/pages/family.html
+++ b/pages/family.html
@@ -46,17 +46,17 @@
         <div class="family-member">
             <img src="../img/mom.jpg" alt="Family">
             <h2>Family</h2>
-            <p>I was born in Semey, like my whole family. However, when I entered SDU University, we scattered to different cities like cockroaches. The fact is that in the same year my sister enrolled in Semey NIS, and my mother moved to Astana so that my sister would live in the NIS dorm and not travel long distances to school and back every day.</p>
+            <p class="t-left">I was born in Semey, like my whole family. However, when I entered SDU University, we scattered to different cities like cockroaches. The fact is that in the same year my sister enrolled in Semey NIS, and my mother moved to Astana so that my sister would live in the NIS dorm and not travel long distances to school and back every day.</p>
         </div>
         <div class="family-member">
             <img src="../img/mama_2.png" alt="Mother">
             <h2>Mother</h2>
-            <p>My mother is a strong woman who was able to dress and teach two children. My sister and I try to please her with our academic and career successes. She gave us a boost and we try to make the most of all the inertia, showing that her work was not in vain.</p>
+            <p class="t-left">My mother is a strong woman who was able to dress and teach two children. My sister and I try to please her with our academic and career successes. She gave us a boost and we try to make the most of all the inertia, showing that her work was not in vain.</p>
         </div>
         <div class="family-member">
             <img src="../img/lilsister.jpg" alt="Little Sister">
             <h2>Little Sister</h2>
-            <p>Mom says that we found my little sister in the cabbage, but I remember how we sheltered her from the zoo and raised her as a human being. She is currently studying at Semey NIS, and recently organized a clean-up day on the island of Polkovnichiy in Semey. She likes to read books and solve Sudoku. It scares me that she looks like me, because it seems to me that I was also found at the zoo.</p>
+            <p class="t-left">Mom says that we found my little sister in the cabbage, but I remember how we sheltered her from the zoo and raised her as a human being. She is currently studying at Semey NIS, and recently organized a clean-up day on the island of Polkovnichiy in Semey. She likes to read books and solve Sudoku. It scares me that she looks like me, because it seems to me that I was also found at the zoo.</p>
         </div>
     </div>
 </div>
