--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-<header
+<header>
     <nav class="container">
         <a href="../index.html" class="logo">herztard</a>
         <div class="nav-links">
